--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,12 +2,10 @@
   <ul class="users-list">
     <% @users.each do |user| %>
       <li>
+        <%= render 'friend_btn' %>
         Name: <%= user.name %>
         <span class="profile-link">
           <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
-          <%= link_to 'User Request' do %>
-            <i class="fab fa-accessible-icon"></i>
-          <% end %>
         </span>
       </li>
     <% end %>
