added somes scss and fixed check status function

--- a/app/views/users/_friend_btn.html.erb
+++ b/app/views/users/_friend_btn.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Invite', class: 'invite_friend' do %>
-  <span>Invite</span>
+<%= link_to 'Invite', class: check_status(id) + '_friend' do %>
   <i class="fas fa-user-friends"></i>
+  <span>Invite</span>
 <%end%>
