--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,11 +2,11 @@
   <ul class="users-list">
     <% @users.each do |user| %>
       <li>
-        <%= render 'friend_btn' %>
         Name: <%= user.name %>
         <span class="profile-link">
           <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
         </span>
+        <%= render 'friend_btn', id: user.id %>
       </li>
     <% end %>
   </ul>
