--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
       <%= link_to 'Stay in touch', root_path %>
       <div class="menu">
         <div class="menu-item">
+          <%= menu_link_to 'My profile', user_path(current_user) unless current_user.nil?%>
+        </div>
+        <div class="menu-item">
           <%= menu_link_to 'Timeline', posts_path %>
         </div>
         <div class="menu-item">
