--- a/app/views/users/_friend_btn.html.erb
+++ b/app/views/users/_friend_btn.html.erb
@@ -1,4 +1,5 @@
-<%= link_to friend_requests_path(:friend => id.to_i), method: :post, class: check_status(id) + '_friend' do %>
+<%if%>
+<%= link_to send('friend_requests_path', :friend => id), method: 'post', class: check_status(id) + '_friend' do %>
   <i class="fas fa-user-friends"></i>
-  <span>Invite</span>
+  <span><%= check_status(id) %></span>
 <%end%>
