--- a/app/views/users/_friend_btn.html.erb
+++ b/app/views/users/_friend_btn.html.erb
@@ -10,11 +10,17 @@
     </span>
   <%end%>
   <% unless friend_request_sent?(id).nil?%>
-    <% if friend_request_sent?(id).zero?%> <!-- User Has Created The Friend Request -->
-      <%= button_to send('friend_request_path', :id => id), method: 'delete', class:'dicline', disabled: check_status(id) == 'pending', :data => { :disable_with => "Godzilla" }, :title => "Cancel" do %>
+    <% if friend_request_sent?(id).zero? && check_status(id) != 'declined' %> <!-- User Has Created The Friend Request -->
+      <%= button_to send('friend_request_path', :id => id), method: 'delete', class:'dicline', :data => { :disable_with => "Godzilla" }, :title => "Cancel" do %>
         <i class="fas fa-ban"></i>
       <%end%>
     <%elsif friend_request_sent?(id).positive? %><!-- Friend Request Created By Friend -->
+    <%= button_to send('friend_request_path', :id => id, :whatever => 1), method: 'patch', class:'dicline', :data => { :disable_with => "" }, :title => "Reject" do %>
+        <i class="fas fa-ban"></i>
+      <%end%>
+      <%= button_to send('friend_request_path', :id => id, :whatever => 0), method: 'patch', class:'accepted', :data => { :disable_with => "" }, :title => "Accept" do %>
+        <i class="fas fa-check"></i>
+      <%end%>
     <%end%>
   <%end%>
 </div>
