--- a/app/views/users/_friend_btn.html.erb
+++ b/app/views/users/_friend_btn.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="friend_request_btns">
   <%= button_to send('friend_requests_path', :friend => id), method: 'post', class: check_status(id) + '_friend', disabled: check_status(id) == 'pending', :data => { :disable_with => "Godzilla" } do %>
     <i class="fas fa-user-friends"></i>
     <span>
@@ -15,11 +15,15 @@
         <i class="fas fa-ban"></i>
       <%end%>
     <%elsif friend_request_sent?(id).positive? %><!-- Friend Request Created By Friend -->
-    <%= button_to send('friend_request_path', :id => id, :whatever => 1), method: 'patch', class:'dicline', :data => { :disable_with => "" }, :title => "Reject" do %>
-        <i class="fas fa-ban"></i>
+      <%unless check_status(id) == 'declined'%>
+        <%= button_to send('friend_request_path', :id => id, :whatever => 1), method: 'patch', class:'dicline', :data => { :disable_with => "" }, :title => "Reject" do %>
+          <i class="fas fa-ban"></i>
+        <%end%>
       <%end%>
-      <%= button_to send('friend_request_path', :id => id, :whatever => 0), method: 'patch', class:'accepted', :data => { :disable_with => "" }, :title => "Accept" do %>
-        <i class="fas fa-check"></i>
+      <%unless check_status(id) == 'accepted'%>
+        <%= button_to send('friend_request_path', :id => id, :whatever => 0), method: 'patch', class:'accepted', :data => { :disable_with => "" }, :title => "Accept" do %>
+          <i class="fas fa-check"></i>
+        <%end%>
       <%end%>
     <%end%>
   <%end%>
