--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,4 +6,5 @@
       <%= render @posts %>
     </ul>
   </article>
+  <%= render 'friend_btn', id: @user.id unless current_user.id == @user.id %>
 </section>
