--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,4 +7,5 @@
     </ul>
   </article>
   <%= render 'friend_btn', id: @user.id unless current_user.id == @user.id %>
+  <%= render 'user_friends', @user %>
 </section>
