--- a/app/views/users/_all_users.html.erb
+++ b/app/views/users/_all_users.html.erb
@@ -1,7 +1,7 @@
-<% if current_user.id == @user.id %>
+
 <section class="users-section">
   <ul class="users-list">
-    <% @friend.each do |user| %>
+    <% @users.each do |user| %>
      <% unless current_user.id == user.id %>
       <li>
         Name: <%= user.name %>
@@ -14,4 +14,3 @@
     <% end %>
   </ul>
 </section>
-<% end %>
