--- a/app/views/users/_friend_btn.html.erb
+++ b/app/views/users/_friend_btn.html.erb
@@ -1,5 +1,5 @@
 <div class="friend_request_btns">
-  <%= button_to send('friend_requests_path', :friend => id), method: 'post', class: check_status(id) + '_friend', disabled: check_status(id) == 'pending', :data => { :disable_with => "Godzilla" } do %>
+  <%= button_to send('friend_requests_path', :friend => id), method: 'post', class: check_status(id) + '_friend', disabled: check_status(id) != 'neutral', :data => { :disable_with => "Godzilla" } do %>
     <i class="fas fa-user-friends"></i>
     <span>
       <% unless check_status(id)=='neutral' %>
