--- a/app/views/users/_friend_btn.html.erb
+++ b/app/views/users/_friend_btn.html.erb
@@ -10,23 +10,13 @@
     </span>
   <%end%>
 
-  <% if creator?(id) %>
-    <% if check_status(id) != 'neutral' %>
-      <%= button_to send('friend_request_path', :id => id), method: 'delete', class:'dicline', :data => { :disable_with => "Godzilla" }, :title => "Cancel" do %>
-        <i class="fas fa-ban"></i>
-      <%end%>
-    <%end%>
-  <% else %>
-      <%unless declined?(id) == 'declined'%>
-        <%= button_to send('friend_request_path', :id => id, :whatever => 1), method: 'patch', class:'dicline', :data => { :disable_with => "" }, :title => "Reject" do %>
+  <% if !creator?(id) && check_status(id)=='pending' %>
+        <%= button_to send('friend_request_path', :id => id, :answer => false), method: 'patch', class:'dicline', :data => { :disable_with => "" }, :title => "Reject" do %>
           <i class="fas fa-ban"></i>
         <%end%>
-      <%end%>
-      <%unless accepted?(id)%>
-        <%= button_to send('friend_request_path', :id => id, :whatever => 0), method: 'patch', class:'accepted', :data => { :disable_with => "" }, :title => "Accept" do %>
+        <%= button_to send('friend_request_path', :id => id, :answer => true), method: 'patch', class:'accepted', :data => { :disable_with => "" }, :title => "Accept" do %>
           <i class="fas fa-check"></i>
         <%end%>
-      <%end%>
   <%end%>
 
 </div>
